# 100-ai-test

./: AGENTS.md  AI_AGENTS_GUIDE.md  Plano_de_arquitetura.md  Plano_de_execucao.md  README.md  TECH_DEBT_LOG.md  config_models.py  mypy.ini  pyproject.toml  requirements.txt  system_config.yaml  validate_config.py
.github/workflows/: ci.yml
docs/: system_config.md
examples/: run_orchestrator.py
personal_agent/adapters/: __init__.py
personal_agent/agents/: __init__.py  archivist_agent.py
personal_agent/core/: config_validator.py  meta_orchestrator.py
personal_agent/memory/: README.md  simple_rag.py
personal_agent/strategies/: basic_strategy.py
personal_agent/utils/: __init__.py
scripts/: validate_config.py  validate_interfaces.py
src/: __init__.py
src/agents/: __init__.py  sample_agent.py
src/core/: config_validator.py  interfaces.py  meta_orchestrator.py
src/memory/: __init__.py  simple_rag.py
src/personal_agent/core/: __init__.py
src/personal_agent/strategies/: research_strategy.py
src/personal_agent/tools/: __init__.py
src/strategies/: __init__.py  basic_strategy.py  research_strategy.py
src/utils/: logging.py
tests/: test_meta_orchestrator.py  test_package_imports.py
tests/unit/: test_archivist_agent.py  test_basic_strategy.py  test_config_models.py  test_config_validator.py  test_interfaces_models.py  test_research_strategy.py  test_sample_agent.py  test_simple_rag.py  test_system_config_round_trip.py  test_validate_config.py  test_validate_interfaces.py  test_version_validation.py
