[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-agent"
version = "0.1.0"
description = "Personal AI agent system"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Example Author", email = "author@example.com"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = ["config_models"]
